TakeTheBest-Project/TakeTheBest-Project/k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: take-the-best-app
  namespace: take-the-best
spec:
  replicas: 2
  selector:
    matchLabels:
      app: take-the-best-app
  template:
    metadata:
      labels:
        app: take-the-best-app
    spec:
      containers:
      - name: takethebest-app
        image: ivkeex/takethebest-app:latest
        ports:
        - containerPort: 80
