TakeTheBest-Project/TakeTheBest-Project/k8s-manifests/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: takethebest-db
  namespace: takethebest-namespace
spec:
  selector:
    matchLabels:
      app: takethebest-db
  serviceName: "takethebest-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: takethebest-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
