TakeTheBest-Project/TakeTheBest-Project/k8s-manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: take-the-best-app-svc
  namespace: take-the-best
spec:
  selector:
    app: take-the-best-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
