TakeTheBest-Project/TakeTheBest-Project/k8s-manifests/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: take-the-best
spec:
  ports:
  - port: 1433
    targetPort: 1433
  clusterIP: None
  selector:
    app: sqlserver
