TakeTheBest-Project/TakeTheBest-Project/k8s-manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: take-the-best-ingress
  namespace: take-the-best
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: take-the-best.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: take-the-best-app-svc
            port:
              number: 80
